# cnf-gen

./: LICENSE  README.md  cnf-gen.cabal
src/: Main.hs
