cabal-version:      3.0
name:               cnf-gen
version:            0.1.0.0
synopsis:           CNF formula generator, built for SAT solvers.
-- description:
license:            MIT
license-file:       LICENSE
author:             Robert Coffey
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable cnf-gen
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          Main.hs
    build-depends:    base ^>=4.20.2.0,
                      containers,
                      optparse-applicative >= 0.19.0.0,
                      random
    -- other-modules:
    -- other-extensions:
